PROJECT(rcore)

ADD_SOURCE_FILE(rcore std RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore tools RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore app RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore prg RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore db RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore geometry RCORE_INCLUDES)

INCLUDE_DIRECTORIES(${RCORE_INCLUDES})
ADD_LIBRARY(rcore SHARED ${rcore_TARGET_SOURCES})
TARGET_LINK_LIBRARIES(rcore ${CMAKE_THREAD_LIBS_INIT} ${MYSQLCLIENT_LIB_PATH} ${ICONV_LIB_PATH} ${CURL_LIB_PATH})

SET_TARGET_PROPERTIES(rcore PROPERTIES LT_VERSION_CURRENT 2
                                       VERSION 2.0.0
                                       SOVERSION 2)

CREATE_LIBTOOL_FILE(rcore /lib)
INSTALL(TARGETS rcore LIBRARY DESTINATION lib)

IF(rcmake-verbose)
PRINT_LIST_WITH_MESSAGE("Will install the following header files for rcore:" rcore_INST_INCLUDES)
ENDIF(rcmake-verbose)

INSTALL(FILES ${rcore_INST_INCLUDES} DESTINATION include/r)

ADD_SOURCE_FILE(rcore frontend RCORE_INCLUDES)

ADD_FRONTEND(rcore 2 2 2.0.0 lib r RCORE_INCLUDES)