PROJECT(rcore)

IF(WIN32)
    ADD_SOURCE_FILE(rcore win32support RCORE_INCLUDES)
ENDIF(WIN32)
ADD_SOURCE_FILE(rcore tools RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore app RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore prg RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore db RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore geometry RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore io RCORE_INCLUDES)
ADD_SOURCE_FILE(rcore xml RCORE_INCLUDES)

INCLUDE_DIRECTORIES(${RCORE_INCLUDES})

IF(WIN32)
    ADD_LIBRARY(rcore STATIC ${rcore_TARGET_SOURCES})
    SET_TARGET_PROPERTIES(rcore PROPERTIES LINK_FLAGS "/NODEFAULTLIB:MSVCRTD;MSVCRT;LIBCMT;LIBCMTD")
    TARGET_LINK_LIBRARIES(rcore ${MYSQLCLIENT_LIB_PATH} ${POSTGRESQL_LIBRARIES} ${SQLITE_LIB_PATH} ${ICONV_LIB_PATH} ${CURL_LIB_PATH} ws2_32.lib msvcrtd.lib)
    INSTALL(TARGETS rcore ARCHIVE DESTINATION lib)
ELSE(WIN32)
    ADD_LIBRARY(rcore SHARED ${rcore_TARGET_SOURCES})
    TARGET_LINK_LIBRARIES(rcore ${CMAKE_THREAD_LIBS_INIT} ${PostgreSQL_LIBRARIES} ${MYSQLCLIENT_LIB_PATH} ${SQLITE_LIB_PATH} ${ICONV_LIB_PATH} ${CURL_LIB_PATH})
    CREATE_LIBTOOL_FILE(rcore /lib)
    INSTALL(TARGETS rcore LIBRARY DESTINATION lib)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(rcore PROPERTIES LT_VERSION_CURRENT 2
                                       VERSION 2.0.0
                                       SOVERSION 2)


IF(rcmake-verbose)
    PRINT_LIST_WITH_MESSAGE("Will install the following header files for rcore:" rcore_INST_INCLUDES)
ENDIF(rcmake-verbose)

INSTALL(FILES ${rcore_INST_INCLUDES} DESTINATION include/r)

ADD_SOURCE_FILE(rcore frontend RCORE_INCLUDES)

ADD_FRONTEND(rcore 2 2 2.0.0 lib r RCORE_INCLUDES)
