INCLUDES = -I$(top_srcdir) $(all_includes)
pkglib_LTLIBRARIES =  librmath.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rmathincludedir = $(includedir)/r/rmath
rmathinclude_HEADERS = geometry.h rline.h rpoint.h rpoints.h rpolygon.h rpolygons.h rrect.h rrects.h \
			redge.h rgraph.h rvertex.h rmatrix.h rgenericcell.h rgenericcell.hh rgenericcellcursor.h \
			rgenericcellcursor.hh rgenericsparsevector.h rgenericsparsevector.hh \
			rgenericvectorcursor.h rgenericvectorcursor.hh rgenericsparsematrix.h \
			rgenericsparsematrix.hh rvectorint.h rmath.h
librmath_la_SOURCES = geometry.cpp rline.cpp rpoint.cpp rpoints.cpp rpolygon.cpp rpolygons.cpp rrect.cpp rrects.cpp \
			redge.cpp rgraph.cpp rvertex.cpp rmatrix.cpp rvectorint.cpp rmath.cpp
