INCLUDES = -I$(top_srcdir)
pkglib_LTLIBRARIES =  librga.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rgaincludedir = $(includedir)/r/rga
rgainclude_HEADERS =  rchromo.h rchromo.hh rdebug.h rfitness.h rfitness.hh rga.h \
					rgaimplementation.h rgasignals.h rinst.h rinst.hh robjs.h
librga_la_SOURCES = rdebug.cpp rga.cpp
