INCLUDES = -I$(top_srcdir) $(all_includes)
pkglib_LTLIBRARIES =  librga.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rgaincludedir = $(includedir)/r/rga
rgainclude_HEADERS =  rchromo.h rchromo.hh rdebug.h rfitness.h rfitness.hh rga.h \
					rgaimplementation.h rgasignals.h rinst.h rinst.hh robjs.h  \
					rchromog.h rchromog.hh rfirstfitheuristic.h rfirstfitheuristic.hh \
					rgga.h rgroup.h rgroup.hh rgroupingheuristic.h rgroupingheuristic.hh \
					rgroupingkmeans.h rgroupingkmeans.hh rgroups.h rgroups.hh rinstg.h \
					rinstg.hh robjg.h rconnection.h rconnections.h \
					rchromo2d.h rchromo2d.hh rfreepolygon.h rfreepolygons.h rga2d.h \
					rga2dimplementation.h rgeoinfoconnection.h rgeoinfoconnections.h \
					rgeoinfo.h rgeoinfos.h rgrid.h rinst2d.h rinst2d.hh robj2dcontainer.h \
					robj2d.h rplacementbottomleft.h rplacementcenter.h rplacementedge.h \
					rplacementheuristic.h rproblem2d.h
librga_la_SOURCES = rdebug.cpp rga.cpp robjg.cpp rgga.cpp \
					rconnection.cpp rconnections.cpp rfreepolygon.cpp rfreepolygons.cpp \
					rga2d.cpp rgeoinfoconnection.cpp rgeoinfoconnections.cpp \
					rgeoinfo.cpp rgeoinfos.cpp rgrid.cpp robj2dcontainer.cpp \
					robj2d.cpp rplacementbottomleft.cpp rplacementcenter.cpp \
					rplacementedge.cpp rplacementheuristic.cpp rproblem2d.cpp
