INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libapp.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
appincludedir = $(includedir)/r
appinclude_HEADERS =  rapplication.h  rconfig.h rparam.h rnotification.h rnotificationcenter.h robject.h
libapp_la_SOURCES =  rapplication.cpp rconfig.cpp rparam.cpp rnotification.cpp rnotificationcenter.cpp robject.cpp
