INCLUDES = -I$(top_srcdir) $(all_includes)
pkglib_LTLIBRARIES =  librstd.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rstdincludedir = $(includedir)/r/rstd
rstdinclude_HEADERS =  rstd.h rcontainer.h rcontainer.hh rcursor.h rcursor.hh \
					rhashcontainer.h rdblhashcontainer.h rmsg.h rstring.h rchar.h \
					random.h rio.h rtextfile.h rrecfile.h rrecfile.hh rdate.h \
					rlang.h rlocale.h rmsg.h rnode.h rnode.hh rtree.h rtree.hh \
					rxmlattr.h rxmlfile.h rxmlstruct.h rxmltag.h rhtmlfile.h \
					rtextencoding.h rcstring.h

librstd_la_SOURCES =  random.cpp rdate.cpp rio.cpp rlang.cpp rlocale.cpp rmsg.cpp \
				rstd.cpp rstring.cpp rtextfile.cpp rchar.cpp rxmlattr.cpp \
				rxmlfile.cpp rxmlstruct.cpp rxmltag.cpp rhtmlfile.cpp \
				rtextencoding.cpp rcstring.cpp
