INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libstd.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
stdincludedir = $(includedir)/r
stdinclude_HEADERS =  rstd.h rcontainer.h rcontainer.hh rcursor.h \
			rhashcontainer.h rdblhashcontainer.h rnode.h rnode.hh rtree.h rtree.hh \
			rshareddata.h basiccontainer.h basiccursor.h basicstring.h basicstring.hh

libstd_la_SOURCES =  rstd.cpp basiccontainer.cpp basiccursor.cpp 
