INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libgeometry.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
geometryincludedir = $(includedir)/r
geometryinclude_HEADERS = rgeometry.h rline.h rpoint.h rpoints.h rpolygon.h rpolygons.h rrect.h rrects.h
libgeometry_la_SOURCES = rgeometry.cpp rline.cpp rpoint.cpp rpoints.cpp rpolygon.cpp rpolygons.cpp rrect.cpp rrects.cpp
