INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libmatrix.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
matrixincludedir = $(includedir)/r
matrixinclude_HEADERS = rmatrix.h rgenericcell.h rgenericcell.hh rgenericcellcursor.h \
			rgenericcellcursor.hh rgenericsparsevector.h rgenericsparsevector.hh \
			rgenericvectorcursor.h rgenericvectorcursor.hh rgenericsparsematrix.h \
			rgenericsparsematrix.hh rvectorint.h rvectorint.hh
libmatrix_la_SOURCES = rmatrix.cpp
