INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libga.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
gaincludedir = $(includedir)/r
gainclude_HEADERS =  rchromo.h rchromo.hh rdebug.h rfitness.h rfitness.hh rga.h \
					rinst.h rinst.hh robjs.h
libga_la_SOURCES = rdebug.cpp rga.cpp
