INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libga2d.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
ga2dincludedir = $(includedir)/r
ga2dinclude_HEADERS =  rconnection.h rconnections.h \
			rchromo2d.h rchromo2d.hh rfreepolygon.h rfreepolygons.h rga2d.h \
			rga2dimplementation.h rgeoinfoconnection.h rgeoinfoconnections.h \
			rgeoinfo.h rgeoinfos.h rgrid.h rinst2d.h rinst2d.hh robj2dcontainer.h \
			robj2d.h rplacementbottomleft.h rplacementcenter.h rplacementedge.h \
			rplacementheuristic.h rproblem2d.h
libga2d_la_SOURCES = rconnection.cpp rconnections.cpp rfreepolygon.cpp rfreepolygons.cpp \
			rga2d.cpp rgeoinfoconnection.cpp rgeoinfoconnections.cpp \
			rgeoinfo.cpp rgeoinfos.cpp rgrid.cpp robj2dcontainer.cpp \
			robj2d.cpp rplacementbottomleft.cpp rplacementcenter.cpp \
			rplacementedge.cpp rplacementheuristic.cpp rproblem2d.cpp
