INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libgga.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
ggaincludedir = $(includedir)/r
ggainclude_HEADERS = rchromog.h rchromog.hh rfirstfitheuristic.h rfirstfitheuristic.hh \
			rgga.h rgroup.h rgroup.hh rgroupingheuristic.h rgroupingheuristic.hh \
					rgroupingkmeans.h rgroupingkmeans.hh rgroups.h rgroups.hh rinstg.h \
					rinstg.hh robjg.h 
libgga_la_SOURCES = robjg.cpp rgga.cpp
