INCLUDES = -I$(top_srcdir)
lib_LTLIBRARIES =  librpromethee.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rpromincludedir = $(includedir)/r/rpromethee
rprominclude_HEADERS =  rpromethee.h rpromcriterion.h rpromcritvalue.h \
			rpromkernel.h rpromsol.h
librpromethee_la_SOURCES = rpromcriterion.cpp rpromcritvalue.cpp rpromethee.cpp \
			rpromkernel.cpp rpromsol.cpp
