INCLUDES = -I$(top_srcdir)  $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libpromethee.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
promincludedir = $(includedir)/r
prominclude_HEADERS =  rpromethee.h rpromcriterion.h rpromcritvalue.h \
			rpromkernel.h rpromsol.h
libpromethee_la_SOURCES = rpromcriterion.cpp rpromcritvalue.cpp rpromethee.cpp \
			rpromkernel.cpp rpromsol.cpp
