INCLUDES = -I$(R_LIB) -I$(top_srcdir) $(all_includes)
pkglib_LTLIBRARIES =  libkde_r.la

libkde_r_la_METASOURCES = AUTO

AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rincludedir = $(includedir)/r/frontend/kde
rinclude_HEADERS = qgamonitor.h qxmlcontainer.h qdrawpolygons.h \
			qpromcriteria.h
libkde_r_la_SOURCES =  qgamonitor.cpp qxmlcontainer.cpp qdrawpolygons.cpp \
			qpromcriteria.cpp
