INCLUDES = -I$(top_srcdir) $(all_includes) $(INCLUDES_R)
noinst_LTLIBRARIES =  libkde_r.la

libkde_r_la_METASOURCES = AUTO

AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =
rincludedir = $(includedir)/r
rinclude_HEADERS = qgamonitor.h qpromcriteria.h qxmlcontainer.h qdrawpolygons.h
libkde_r_la_SOURCES =  qgamonitor.cpp qpromcriteria.cpp qxmlcontainer.cpp qdrawpolygons.cpp
